=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.24_02-dev

Documenting the new PerlAddVar httpd.conf directive
[Stas Bekman <sbekman@stason.org>]

new Apache::test::static_modules() method
[Ken Williams <ken@forum.swarthmore.edu>]

Improved Apache->send_http_header documentation
[Ken Williams <ken@forum.swarthmore.edu>]

=item 1.24_01 - October 10, 2000

fix bug in $r->args that treats ?0 as the empty string instead of zero,
thanks to Matt Sergeant for the spot

add proper offset support to Apache::read

config/test fixups for libapreq/win32
[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]

skip modules/ssi test if mod_include is not installed

Apache::test enhancements
[Ken Williams <ken@forum.swarthmore.edu>]

fix Apache::exit() so it does it does not trigger a warning

change Apache::PerlRun's Apache class relationship from is-a to has-a
[Ken Williams <ken@forum.swarthmore.edu>]

Apache::SubRequest->run(1) allows ap_send_http_headers() to output for
subrequests

Apache::{Registry,PerlRun} will now log an error if $filename is NOT_FOUND
thanks to Martin Wood for the spot

fix bug where Apache::send_http_header was resetting r->status = 200
thanks to brian d foy for the spot

make extra sure Apache::Constants::AUTOLOAD does not recurse looking
for sub __AUTOLOAD [Jim Winstead <jimw@trainedmonkey.com>]

fix %Apache::ReadConfig:: processing for PerlRequire'd files
[Salvador Ortiz Garcia <sog@msg.com.mx>]

$r->get_basic_auth_pw and $r->note_basic_auth_failure will default
$r->auth_type to "Basic" if not already set

$r->auth_type is now writeable, e.g. $r->auth_type("Basic")

fix $r->read() so it will not block if all data has already been read
and so that Apache will not hang during ap_discard_request_body() on
error or redirect after all data has been read

fix for Makefile.PL ADD_MODULE=src/module/foo/libfoo.a
[Nelson Oliveira <NOliveira@extend.com>]
