@@ -1,14 +1,15 @@
 package Apache::test;
 
 use strict;
-use vars qw(@EXPORT $USE_THREAD $USE_SFIO $PERL_DIR);
+use vars qw(@EXPORT $USE_THREAD $USE_SFIO $PERL_DIR @EXPORT_OK);
 use Exporter ();
 use Config;
 use FileHandle ();
 *import = \&Exporter::import;
 
-@EXPORT = qw(test fetch simple_fetch have_module skip_test 
+@EXPORT = qw(test fetch simple_fetch have_module skip_test
 	     $USE_THREAD $USE_SFIO $PERL_DIR WIN32 grab run_test); 
+@EXPORT_OK = qw(have_httpd);
 
 BEGIN { 
     if(not $ENV{MOD_PERL}) {
@@ -86,14 +87,15 @@ EOF
 
 sub _ask {
     # Just a function for asking the user questions
-    my ($prompt, $default, $mustfind) = @_;
+    my ($prompt, $default, $mustfind, $canskip) = @_;
 
+    my $skip = defined $canskip ? " ('$canskip' to skip)" : '';
     my $response;
     do {
-	print "$prompt [$default]: ";
+	print "$prompt [$default]$skip: ";
 	chomp($response = <STDIN>);
 	$response ||= $default;
-    } until (!$mustfind || (-e $response || !print("$response not found\n")));
+    } until (!$mustfind || ($response eq $canskip) || (-e $response || !print("$response not found\n")));
 
     return $response;
 }
@@ -108,10 +110,16 @@ sub get_test_params {
     
     my $httpd = $ENV{'APACHE'} || which('apache') || which('httpd') || '/usr/lib/httpd/httpd';
 
-    $httpd = _ask("\n", $httpd, 1);
+    $httpd = _ask("\n", $httpd, 1, '!');
+    if ($httpd eq '!') {
+	print "Skipping.\n";
+	return;
+    }
     system "$Config{lns} $httpd t/httpd";
 
-    if (lc _ask("Search existing config file for dynamic module dependencies?", 'n') eq 'y') {
+    # Default: search for dynamic dependencies if mod_so is present, don't bother otherwise.
+    my $default = (`t/httpd -l` =~ /mod_so\.c/ ? 'y' : 'n');
+    if (lc _ask("Search existing config file for dynamic module dependencies?", $default) eq 'y') {
 	my %compiled;
 	for (`t/httpd -V`) {
 	    if (/([\w]+)="(.*)"/) {
@@ -148,6 +156,8 @@ sub _read_existing_conf {
     
     my @modules       =   grep /^\s*(Add|Load)Module/, @lines;
     my ($server_root) = (map /^\s*ServerRoot\s*(\S+)/, @lines);
+    $server_root =~ s/^"//;
+    $server_root =~ s/"$//;
 
     # Rewrite all modules to load from an absolute path.
     foreach (@modules) {
@@ -308,6 +318,10 @@ sub have_module {
 sub skip_test {
     print "1..0\n";
     exit;
+}
+
+sub have_httpd {
+    return -e 't/httpd';
 }
 
 sub run {
@@ -514,7 +528,9 @@ Apache::Test - Facilitates testing of Apache::* modules
  *MY::test = sub { Apache::test->MM_test(%params) };
 
  # In t/*.t script (or test.pl)
- (Some methods of Doug's that I haven't reviewed or documented yet)
+ use Apache::test qw(skip_test have_httpd);
+ skip_test unless have_httpd;
+ (Some more methods of Doug's that I haven't reviewed or documented yet)
 
 =head1 DESCRIPTION
 
