@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.24_02-dev
 
+various Apache::test enhancements and fixes
+[Ken Williams <ken@forum.swarthmore.edu>, Dave Rolsky <autarch@urth.org>]
+
 Documenting the new PerlAddVar httpd.conf directive
 [Stas Bekman <sbekman@stason.org>]
 
